<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AddOrder">Add Order</string>
    <string name="AddressOnMap">Address On map</string>
    <string name="CancelOrder">Cancel Order</string>
    <string name="CancelTravel">Cancel Travel</string>
    <string name="Cancel_order">Cancel order</string>
    <string name="CompanyName">CompanyName</string>
    <string name="Done">Done</string>
    <string name="DoneRecive">order successfully delivered</string>
    <string name="EmailNotValidate">Email Not Validate</string>
    <string name="EmailValid">Email not valid</string>
    <string name="EmpityComfirmPass">Please enter your Confirm Password !</string>
    <string name="EmpityNewPass">Please enter your New Password !</string>
    <string name="EmpityOldPass">Please enter your Old Password !</string>
    <string name="EndTravel">End Travel</string>
    <string name="EpityEmail">Please enter your email !</string>
    <string name="EpityMobile">Please enter your mobile number ?</string>
    <string name="EpityPassword">Please enter your password ?</string>
    <string name="Loading">Loading</string>
    <string name="NO">NO</string>
    <string name="menu">menu</string>
    <string name="NavMenu">Menu</string>
    <string name="NotMatchPass">Password does not match</string>
    <string name="PilotName">Pilot Name</string>
    <string name="PilotOrder">Order pilot now</string>
    <string name="ReturnOrder">Return Order</string>
    <string name="SAVE_CONTINUE">SAVE AND CONTINUE</string>
    <string name="StartTravel">Start Travel</string>
    <string name="SureEndTravel">Sure to end the Order?</string>
    <string name="YES">YES</string>
    <string name="account">my account</string>
    <string name="accountRest">account</string>
    <string name="agree">Agree</string>
    <string name="app_name">Delivirko</string>
    <string name="bagBill">Bag</string>
    <string name="btnLogin">Login</string>
    <string name="buildingNo">Building No.</string>
    <string name="canceled">Rejected Trips</string>
    <string name="cash">cash</string>
    <string name="changePassword">change password</string>
    <string name="choose_location">Choose a location please ?</string>
    <string name="city">City</string>
    <string name="clientName">Client Name</string>
    <string name="close">Close</string>
    <string name="confirmPassword">confirm password</string>
    <string name="currencyJeneh">EGP</string>
    <string name="dailyReport">Daily Report</string>
    <string name="dataUpdate">Update Data</string>
    <string name="deliveryCost">Delivery cost (EGP)</string>
    <string name="dialog_enable_3g">Enable 3G</string>
    <string name="dialog_enable_wifi">Enable WIFI</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_no_inter_message">You have not active internet connection.</string>
    <string name="dialog_no_internet">No Internet</string>
    <string name="discountAmount">Discount Amount</string>
    <string name="done">Done</string>
    <string name="ePay">e-pay</string>
    <string name="ePayServices">E-Pay Services</string>
    <string name="electronic">electronic</string>
    <string name="endOrderMessage">Are you exactly out of order? This means that you have delivered the order Successfully to the customer and complete the order</string>
    <string name="ensure">Guarantee</string>
    <string name="errorFeaild">please enter the empty Field !</string>
    <string name="flatNo">Flat No.</string>
    <string name="floorNo">Floor No.</string>
    <string name="followOrders">follow orders</string>
    <string name="freeOrders">free orders</string>
    <string name="loading_pilots">Loading for connecting with pilots</string>
    <string name="logInAs">Login as</string>
    <string name="logo_out">Are you sure to Log out ?</string>
    <string name="main">main</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_no">MOBILE NO.</string>
    <string name="myLocation">My Location</string>
    <string name="myOrders">my orders</string>
    <string name="newPassword">new password</string>
    <string name="no_internet">Internet not available</string>
    <string name="officeFee">Office Fee</string>
    <string name="oldPassword">old password</string>
    <string name="orderDetails">Order Details</string>
    <string name="orderNumber">Order No.</string>
    <string name="orderType">Order Type</string>
    <string name="orderValue">Order Price</string>
    <string name="orders">orders</string>
    <string name="ordersIncome">Income From Orders</string>
    <string name="password">PASSWORD</string>
    <string name="permission">"You don't assign permission."</string>
    <string name="pilotInfo">Pilot Data</string>
    <string name="place_hint">Place automatically view here</string>
    <string name="reject">Reject</string>
    <string name="restorePassword">Restore Password</string>
    <string name="returnOrderMessage">Are you sure to return the order ؟This will classify the order with the orders returned</string>
    <string name="returnOrderQuestion">Are you sure to return the order ؟</string>
    <string name="reward">Reward</string>
    <string name="rulesConditions">rules &amp; conditions</string>
    <string name="selectActClient">Client</string>
    <string name="selectActPilot">Pilot</string>
    <string name="selectActRest">Restaurant</string>
    <string name="settings">settings</string>
    <string name="signOut">Sign Out</string>
    <string name="specialMark">Special Mark</string>
    <string name="street">Street</string>
    <string name="stringPilotCode">Pilot Code</string>
    <string name="stringPilotName">Pilot Name</string>
    <string name="supply">help &amp; supply</string>
    <string name="thePilot">The Pilot</string>
    <string name="totalMoney">Total Earned Money</string>
    <string name="totalOrders">Total Orders</string>
    <string name="transferToCash">Transfer To Cash</string>
    <string name="tvAcceptance">Acceptance Percent</string>
    <string name="tvCompleteOrders">Completed Orders Percent</string>
    <string name="tvDeliveryPrice">Shipping</string>
    <string name="tvForgetPass">Forget Password?</string>
    <string name="tvForgetPassHint">Write your email please, to restore your password</string>
    <string name="tvNewerOrders">Newer</string>
    <string name="tvNoOfOrders">No. of Orders</string>
    <string name="tvOlderOrders">Older</string>
    <string name="tvOrderAddress">Address</string>
    <string name="tvOrderClientName">Client Name</string>
    <string name="tvOrderDate">Date</string>
    <string name="tvOrderIsPayed">Payment</string>
    <string name="tvOrderPoints">Points</string>
    <string name="tvOrderPrice">Order Price</string>
    <string name="tvOrderTime">Time</string>
    <string name="tvPilotLogin">Pilot Login</string>
    <string name="tvPointNo">No. of Points</string>
    <string name="tvRateBill">Rate</string>
    <string name="tvRateRest">Restaurant Rate</string>
    <string name="tvRestLogin">Restaurant Login</string>
    <string name="tvTotal">Total</string>
    <string name="txtEmail">EMail</string>
    <string name="untilTo">Until To</string>
    <string name="upTo">Up to</string>
    <string name="workHours">Work Hours</string>
    <string name="yourWeekBalance">your balance this week</string>
</resources>
