<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/layoutForgetDialog" android:background="@drawable/dialog_bg" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/SureEndTravel" style="@style/TitleDialogStyle" />
        <TextView android:textSize="@dimen/textSizeDialogMsg" android:textColor="@color/GreyDialogMsg" android:id="@+id/tvForget2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="17.0dip" android:text="@string/endOrderMessage" />
        <LinearLayout android:orientation="horizontal" android:layout_width="320.0dip" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:layout_marginStart="50.0dip" android:layout_marginEnd="50.0dip">
            <Button android:id="@+id/btnDialogReject" android:text="@string/reject" android:drawableStart="@drawable/ic_false" android:layout_marginEnd="3.0dip" style="@style/btnDialogStyle" />
            <Button android:id="@+id/btnDialogAgree" android:background="@drawable/true_or_false_btn" android:text="@string/agree" android:drawableStart="@drawable/ic_true" android:layout_marginStart="3.0dip" style="@style/btnDialogStyle" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:gravity="center_vertical" android:id="@+id/tvCloseQuestionDialog" android:text="@string/close" android:layout_below="@+id/layoutForgetDialog" android:layout_centerHorizontal="true" style="@style/TvCloseDialog" />
</RelativeLayout>