<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/layoutForgetDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvForget1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/restorePassword"
            android:textSize="@dimen/tvDialogTitle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvForget2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/tvForgetPassHint"
            android:textColor="@color/GreyDialogMsg"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/txtForget1"
            style="@style/TxtStyleWhiteBg"
            android:layout_width="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="0dp"
            android:hint="@string/txtEmail"
            android:padding="10dp" />

        <Button
            android:id="@+id/rest_btn"
            style="@style/ButtonStyleActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/btnLogin"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCloseFDialog"
        style="@style/TvCloseDialog"
        android:layout_below="@+id/layoutForgetDialog"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:text="@string/close" />

</RelativeLayout>