<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/ItemBillStyle"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="4dp">

                    <TextView
                        style="@style/TitleBillItemStyle"
                        android:text="@string/tvRateBill" />

                    <TextView
                        android:id="@+id/tvRateBill"
                        style="@style/ValueItemBill"
                        android:text="4.5/5" />
                </LinearLayout>

                <LinearLayout
                    style="@style/ItemBillStyle"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="15dp">

                    <TextView
                        style="@style/TitleBillItemStyle"
                        android:text="@string/workHours" />

                    <TextView
                        android:id="@+id/tvWorksHoursBill"
                        style="@style/ValueItemBill"
                        android:text="70" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/ItemBillStyle"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="4dp">

                    <TextView
                        style="@style/TitleBillItemStyle"
                        android:text="@string/tvPointNo" />

                    <TextView
                        android:id="@+id/tvPointNo"
                        style="@style/ValueItemBill"
                        android:text="70" />
                </LinearLayout>

                <LinearLayout
                    style="@style/ItemBillStyle"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="15dp">

                    <TextView
                        style="@style/TitleBillItemStyle"
                        android:text="@string/tvNoOfOrders" />

                    <TextView
                        android:id="@+id/tvNoOfOrders"
                        style="@style/ValueItemBill"
                        android:text="60" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/ItemBillStyle"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="4dp">

                    <TextView
                        style="@style/TitleBillItemStyle"
                        android:text="@string/tvCompleteOrders" />

                    <TextView
                        android:id="@+id/tvComplete"
                        style="@style/ValueItemBill"
                        android:text="90%" />
                </LinearLayout>

                <LinearLayout
                    style="@style/ItemBillStyle"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="15dp">

                    <TextView
                        style="@style/TitleBillItemStyle"
                        android:text="@string/tvAcceptance" />

                    <TextView
                        android:id="@+id/tvAcceptance"
                        style="@style/ValueItemBill"
                        android:text="20%" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/RowBillWhite">

                <TextView
                    style="@style/BillDataTitleStyle"
                    android:text="@string/ordersIncome" />

                <TextView
                    android:id="@+id/tvOrdersIncome"
                    style="@style/DataValueBillStyle"
                    android:text="550" />

            </LinearLayout>

            <LinearLayout style="@style/RowBillGrey">

                <TextView
                    style="@style/BillDataTitleStyle"
                    android:text="@string/reward" />

                <TextView
                    android:id="@+id/tvReward"
                    style="@style/DataValueBillStyle"
                    android:text="2" />

            </LinearLayout>

            <LinearLayout style="@style/RowBillWhite">

                <TextView
                    style="@style/BillDataTitleStyle"
                    android:text="@string/ensure" />

                <TextView
                    android:id="@+id/tvEnsure"
                    style="@style/DataValueBillStyle"
                    android:text="9" />

            </LinearLayout>

            <LinearLayout style="@style/RowBillGrey">

                <TextView
                    style="@style/BillDataTitleStyle"
                    android:text="@string/canceled" />

                <TextView
                    android:id="@+id/tvCanceledTrips"
                    style="@style/DataValueBillStyle"
                    android:text="550"
                    android:textColor="@color/colorRedDelivirko" />

            </LinearLayout>


            <LinearLayout style="@style/RowBillWhite">

                <TextView
                    style="@style/BillDataTitleStyle"
                    android:text="@string/officeFee" />

                <TextView
                    android:id="@+id/tvOfficeFee"
                    style="@style/DataValueBillStyle"
                    android:text="550"
                    android:textColor="@color/colorRedDelivirko" />

            </LinearLayout>

            <LinearLayout style="@style/RowBillGrey">

                <TextView
                    style="@style/BillDataTitleStyle"
                    android:text="@string/bagBill" />

                <TextView
                    android:id="@+id/tvOrderTimeDialog"
                    style="@style/DataValueBillStyle"
                    android:text="550"
                    android:textColor="@color/colorRedDelivirko" />

            </LinearLayout>

            <LinearLayout style="@style/RowBillWhite">

                <TextView
                    style="@style/BillDataTitleStyle"
                    android:text="@string/ePayServices" />

                <TextView
                    android:id="@+id/tvEPay"
                    style="@style/DataValueBillStyle"
                    android:text="550"
                    android:textColor="@color/colorRedDelivirko" />

            </LinearLayout>

            <LinearLayout style="@style/RowBillGrey">

                <TextView
                    style="@style/BillDataTitleStyle"
                    android:text="@string/totalMoney" />

                <TextView
                    android:id="@+id/tvTotalMoney"
                    style="@style/DataValueBillStyle"
                    android:text="550"
                    android:textColor="@color/colorRedDelivirko" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:text="@string/yourWeekBalance"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvWeekBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/paddingBalanceH"
            android:background="@drawable/balance_bg"
            android:paddingStart="@dimen/paddingBalanceH"
            android:paddingTop="@dimen/paddingBalanceV"
            android:paddingEnd="@dimen/paddingBalanceH"
            android:paddingBottom="@dimen/paddingBalanceV"
            android:text="550"
            android:textColor="@android:color/white"
            android:textSize="@dimen/balanceSize"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/currencyJenehH"
            android:text="@string/currencyJeneh"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>
