<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvSheetTitle"
            android:text="@string/dailyReport"
            style="@style/SheetTitleStyle" />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/imgCancelDailyReport"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="26dp"
            android:src="@drawable/ic_close_sheet"
            app:layout_anchor="@id/tvSheetTitle" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyLightBg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_arabic_kufi"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="20/20/2020" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/OrdersTableTextStyle"
            android:text="@string/tvOrderDate" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/greyDividerTabs" />

        <TextView
            style="@style/OrdersTableTextStyle"
            android:text="@string/totalOrders" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/greyDividerTabs" />

        <TextView
            style="@style/OrdersTableTextStyle"
            android:layout_weight="0.7"
            android:text="@string/tvOrderIsPayed" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/greyDividerTabs" />

        <TextView
            android:layout_weight="1.2"
            style="@style/OrdersTableTextStyle"
            android:text="@string/transferToCash" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/rvDailyReport"
        android:background="@color/greyLightBg"
        android:layout_height="wrap_content" />
</LinearLayout>